# digitaltwin-rs

./: Cargo.toml  README.md
digitaltwin/: Cargo.toml
digitaltwin-core/: Cargo.toml
digitaltwin-core/src/: actor_state.rs  lib.rs  types.rs
digitaltwin-macros/: Cargo.toml
digitaltwin-macros/src/: lib.rs
digitaltwin/src/: main.rs  manager.rs  network_receiver.rs  twin_runner.rs
digitaltwin/src/models/: charging_station.rs  light_bulb.rs  mod.rs
src/: main.rs  manager.rs  mqtt_sender.rs  network_receiver.rs
src/core/: aas.rs  actor_state.rs  mod.rs  twin_actor.rs
src/models/: light_bulb.rs  mod.rs
twins/: charger.yaml  ev1.yaml  light_bulb.yaml
