[package]
name = "digitaltwin"
version = "0.1.0"
edition = "2021"
default-run = "digitaltwin"

[dependencies]
clap = { version = "4.5.32", features = ["derive", "env"] }
env_logger = "0.11.7"
log = "0.4.27"
rumqttc = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }

digitaltwin-macros = { path = "../digitaltwin-macros" }
digitaltwin-core = { path = "../digitaltwin-core" }

[[bin]]
name = "mqtt_sender"
path = "src/mqtt_sender.rs"
